--- a/app/views/congressmembers/index.html.erb
+++ b/app/views/congressmembers/index.html.erb
@@ -1,1 +1,5 @@
-<div id="app"></div>
+<h1>Hello, from
+  <% @congressmembers.each do |congressmember| %>
+  <%= congressmember.first_name %> <%= congressmember.last_name %>!
+  <% end %>
+</h1>
