--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,19 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
+  <nav>
+    <ul>
+      <% if user_signed_in? %>
+        <li><%= link_to 'Sign Out','#' %> </li>
+      <% else %>
+        <li><%= link_to 'Sign Up', new_user_registration_path %> </li>
+      <% end %>
+    </ul>
+  </nav>
+
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
   <body>
     <%= yield %>
   </body>
