--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,55 @@
-<h2>Sign up</h2>
+<div class = "row">
+  <h2 class="text-center">Welcome!</h1>
+</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :first_name, 'First Name' %><br />
-    <%= f.text_field :first_name, autofocus: true %>
+  <div class="row">
+    <div class = "small-offset-3 small-6 columns">
+      <%= f.label :first_name, 'First Name', class: 'input-group-label' %>
+      <%= f.text_field :first_name, autofocus: true %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :last_name, 'Last Name' %><br />
-    <%= f.text_field :last_name, autofocus: true %>
+  <div class="row">
+    <div class = "small-offset-3 small-6 columns">
+      <%= f.label :last_name, 'Last Name', class: 'input-group-label' %>
+      <%= f.text_field :last_name, autofocus: true %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+  <div class="row">
+    <div class = "small-offset-3 small-6 columns">
+      <%= f.label :username, class: 'input-group-label' %>
+      <%= f.text_field :username, autofocus: true %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+  <div class="row">
+    <div class = "small-offset-3 small-6 columns">
+      <%= f.label :email, class: 'input-group-label' %>
+      <%= f.email_field :email, autofocus: true %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, 'Password Confirmation' %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="row">
+    <div class = "small-offset-3 small-6 columns">
+      <%= f.label :password, class: 'input-group-label' %>
+      <%= f.password_field :password, autocomplete: "off" %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign Up" %>
+  <div class="row">
+    <div class = "small-offset-3 small-6 columns">
+      <%= f.label :password_confirmation, "Password Confirmation", class: 'input-group-label' %>
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    </div>
   </div>
+  <div class="row">
+    <div class = "small-offset-3 small-6 columns">
+      <%= f.submit "Join", class: "hollow button" %>
+    </div>
+  </div>
+
+
 <% end %>
-
-<%= render "devise/shared/links" %>
