--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,44 @@
   </head>
 
   <body>
+    <div class="top-bar">
+      <div class="top-bar-title">
+        <h1><strong><%=link_to "POLITICALL", root_path%></strong></h1>
+      </div>
+      <div class="top-bar-right">
+        <% if user_signed_in? %>
+          <div class="top-bar-link">
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+          </div>
+        <% else %>
+          <div class="top-bar-link">
+            <%= link_to "Sign In", new_user_session_path %>
+          </div>
+          <div class="top-bar-link">
+            <%= link_to "Sign Up", new_user_registration_path %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="flash">
+      <% if flash[:notice] %>
+        <% if flash[:notice].is_a?(String) %>
+          <%= flash[:notice] %>
+        <% else %>
+          <% flash[:notice].each do |key, value| %>
+            <% if value.is_a?(Array) %>
+              <% value.each do |error| %>
+                <%= "#{key.capitalize} #{error}." %>
+              <% end %>
+            <% else %>
+              <%= "#{key.capitalize} #{value}." %>
+            <% end %>
+            <br />
+          <% end %>
+        <% end %>
+      <% end %>
+    </div>
 
     <%= yield %>
 
