--- a/app/views/congressmembers/index.html.erb
+++ b/app/views/congressmembers/index.html.erb
@@ -1,5 +1,15 @@
-<h1>Hello, from
-  <% @congressmembers.each do |congressmember| %>
-  <%= congressmember.first_name %> <%= congressmember.last_name %>!
-  <% end %>
-</h1>
+
+<div class="cards-container">
+  <div class="table-cards">
+<% @congressmembers.each do |congressmember| %>
+      <div class="table-card">
+        <div><%= congressmember.chamber.upcase %></div>
+          <div class="content">
+            <h3><%= congressmember.first_name %> <%= congressmember.last_name %></h3>
+            <%= congressmember.state %>, <%= congressmember.party %>
+          </div>
+        <div>Card Footer</div>
+      </div>
+    <% end %>
+  </div>
+</div>
