--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,12 +20,15 @@
         <% if user_signed_in? %>
           <div class="top-bar-link">
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+            <% if current_user.admin? %>
+              <br>
+              <%= link_to "Admin", admin_users_path %>
+            <% end %>
           </div>
         <% else %>
           <div class="top-bar-link">
             <%= link_to "Sign In", new_user_session_path %>
-          </div>
-          <div class="top-bar-link">
+            <br>
             <%= link_to "Sign Up", new_user_registration_path %>
           </div>
         <% end %>
