--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -46,8 +46,8 @@
     </div>
   </div>
   <div class="row">
-    <div class = "small-offset-3 small-6 columns">
-      <%= f.submit "Join", class: "hollow button" %>
+    <div class = "text-align-center">
+      <%= f.submit "Join", class: "button-secondary" %>
     </div>
   </div>
 
