--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Politicall" %></title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
@@ -13,27 +13,29 @@
 
   <body>
     <div class="top-bar">
-      <div class="top-bar-title">
-        <h1><strong><%=link_to "POLITICALL", root_path%></strong></h1>
+      <div class="top-bar-left">
+        <ul class="dropdown menu" data-dropdown-menu>
+          <li class="menu-text"><h1><strong><%=link_to "POLITICALL", root_path%></strong></h1></li>
+          <% if user_signed_in? %>
+            <li><%= link_to "My Account", edit_user_registration_path %></li>
+            <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            <% if current_user.admin? %>
+              <li><%= link_to "Admin", admin_users_path %></li>
+            <% end %>
+          <% else %>
+            <li><%= link_to "Sign In", new_user_session_path %></li>
+            <li><%= link_to "Sign Up", new_user_registration_path %></li>
+          <% end %>
+        </ul>
       </div>
       <div class="top-bar-right">
-        <% if user_signed_in? %>
-          <div class="top-bar-link">
-            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-            <% if current_user.admin? %>
-              <br>
-              <%= link_to "Admin", admin_users_path %>
-            <% end %>
-          </div>
-        <% else %>
-          <div class="top-bar-link">
-            <%= link_to "Sign In", new_user_session_path %>
-            <br>
-            <%= link_to "Sign Up", new_user_registration_path %>
-          </div>
-        <% end %>
-      </div>
+      <ul class="menu">
+        <br>
+        <li><input type="search" placeholder="Search"></li>
+        <li><button type="button" class="button">Search</button></li>
+      </ul>
     </div>
+  </div>
     <br>
     <div class="flash">
       <% if flash[:notice] %>
