--- a/app/views/congressmembers/show.html.erb
+++ b/app/views/congressmembers/show.html.erb
@@ -28,7 +28,7 @@
       <% if @congressmember.facebook_account.present? %>
         <h5>Facebook: <a href="https://facebook.com/<%= @congressmember.facebook_account%>"><%= @congressmember.facebook_account %></a></h5>
       <% end %>
-      <h5>Phone number: <%= @congressmember.phone_number %></h5>
+      <h5>Phone number: <a href="tel:<%= @congressmember.phone_number %>"><%= @congressmember.phone_number %></a></h5>
       <h5>Email: <a href="mailto:<%= @congressmember.email %>"><%= @congressmember.email %></a></h5>
       <h5><a href="https://<%= @congressmember.url %>">Website</a></h5>
 
