--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,12 @@
   .cards-container {
     flex: 1 1 100%;
   }
+
+  .container {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
   .table-cards {
     display: grid;
     grid-template-columns: 1fr 1fr;
