--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,3 +1,8 @@
+<div class="container">
+<h3>All Users</h3>
+<ul>
 <% @users.each do |user| %>
-  <%= user.username %>
+  <li><%= link_to user.username, edit_user_registration_path %></li>
 <% end %>
+</ul>
+</div>
