--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
-<div class = "row">
-  <h2 class="text-center">Welcome!</h1>
+<div class="container">
+<div class="row">
+  <h3 align="center">Welcome!</h3>
 </div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -45,11 +46,10 @@
       <%= f.password_field :password_confirmation, autocomplete: "off" %>
     </div>
   </div>
-  <div class="row">
-    <div class = "text-align-center">
-      <%= f.submit "Join", class: "button-secondary" %>
+  <div class="row" align="center">
+    <div class = "small-offset-3 small-6 columns">
+      <%= f.submit "Join" %>
     </div>
   </div>
-
-
 <% end %>
+</div>
