--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,6 +42,11 @@
     padding-right: 50px;
   }
 
+  .container2 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
   .table-cards {
     display: grid;
     grid-template-columns: 1fr 1fr;
