--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,15 +17,16 @@
         <ul class="dropdown menu" data-dropdown-menu>
           <li class="menu-text"><h1><strong><%=link_to "POLITICALL", root_path%></strong></h1></li>
           <% if user_signed_in? %>
-            <li>
-              <%= link_to "Your Account", edit_user_registration_path %>
-                <ul class="menu">
-                  <% if current_user.admin? %>
-                    <li><%= link_to "Admin", admin_users_path %></li>
-                  <% end %>
-                  <li><%= link_to "Edit Account", edit_user_registration_path %></li>
-                </ul>
-              </li>
+            <li><%= link_to "Your Account", edit_user_registration_path %></li>
+              <% if current_user.admin? %>
+                <li><%= link_to "Admin", admin_users_path %>
+                  <ul class="menu">
+                    <li><%= link_to "All Users", admin_users_path %></li>
+                    <li><%= link_to "Add Congressmember", new_congressmember_path %></li>
+                  </ul>
+                </li>
+              <% end %>
+
             <li>
               <a href="google.com">Your Lists</a>
               <ul class="menu">
@@ -49,18 +50,18 @@
     </div>
   </div>
     <br>
-    <div class="flash">
+    <div class="container2">
       <% if flash[:notice] %>
         <% if flash[:notice].is_a?(String) %>
-          <%= flash[:notice] %>
+          <h5><%= flash[:notice] %></h5>
         <% else %>
           <% flash[:notice].each do |key, value| %>
             <% if value.is_a?(Array) %>
               <% value.each do |error| %>
-                <%= "#{key.capitalize} #{error}." %>
+                <h5><%= "#{key.capitalize} #{error}." %></h5>
               <% end %>
             <% else %>
-              <%= "#{key.capitalize} #{value}." %>
+              <h5><%= "#{key.capitalize} #{value}." %></h5>
             <% end %>
             <br />
           <% end %>
