--- a/app/views/congressmembers/index.html.erb
+++ b/app/views/congressmembers/index.html.erb
@@ -4,7 +4,7 @@
       <% @congressmembers.each do |congressmember| %>
         <div class="table-card">
           <% if congressmember.photo.blank? %>
-            <img src='https://rothfus.house.gov/sites/rothfus.house.gov/files/wysiwyg_uploaded/services.jpg'>
+            <img src="http://www.debsnelsonphotography.com/wp-content/uploads/galleries/post-941/full/US%20Capitol%20Dome%20Washington%20DC%20Blue%20moment%20Predawn%20Night%20Low%20light%20photography.jpg">
           <% else %>
             <img src="<%= congressmember.photo %>">
           <% end %>
@@ -14,7 +14,11 @@
             </h3>
               <h5><%= congressmember.state %>, <%= congressmember.party %></h5>
             <p><strong><%= congressmember.chamber.upcase %></strong></p>
-          <br>
+          <% if current_user %>
+            <div text-align: "center">
+              <h3 class="hollow button"><%= link_to 'Add to List', congressmembers_path %></h3>
+            </div>
+          <% end %>
         </div>
       <% end %>
     </div>
