work on lists' CRUD

--- a/app/views/lists/_form_congresslist.html.erb
+++ b/app/views/lists/_form_congresslist.html.erb
@@ -1,5 +1,4 @@
-<%= form_for [@user, @list] do |f| %>
-
+<%= form_for [current_user, @lists] do |f| %>
 
   <div class="row">
     <div class = "small-offset-3 small-6 columns">
