--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
             <li><%= link_to "Your Account", edit_user_registration_path %>
               <ul class="menu">
                 <li><%= link_to "Edit Account", edit_user_registration_path %></li>
-                <li><%= link_to "Create List", new_user_lists_path(current_user) %></li>
+                <li><%= link_to "New List", new_user_list_path(current_user) %></li>
                 <li><%= link_to "Your Lists", user_lists_path(current_user) %></li>
               </ul>
             </li>
