--- a/app/views/congresslists/new.html.erb
+++ b/app/views/congresslists/new.html.erb
@@ -1,3 +1,3 @@
-<h3 align="center">Create a List</h3>
+<h3 align="center">Add Congressmembers to <%= @list.name %></h3>
 
-<%= render 'form' %>
+<%= render 'form_congresslists' %>
