--- a/app/views/congressmembers/index.html.erb
+++ b/app/views/congressmembers/index.html.erb
@@ -14,11 +14,11 @@
             </h3>
               <h5><%= congressmember.state %>, <%= congressmember.party %></h5>
             <p><strong><%= congressmember.chamber.upcase %></strong></p>
-          <% if current_user %>
+          <!-- <% if current_user %>
             <div text-align: "center">
               <h3 class="hollow button"><%= link_to 'Add to List', congressmembers_path %></h3>
             </div>
-          <% end %>
+          <% end %> -->
         </div>
       <% end %>
     </div>
