--- a/app/views/congressmembers/_form_congressmembers.html.erb
+++ b/app/views/congressmembers/_form_congressmembers.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @congressmember, html: {class: "bar_form"} do |f| %>
+<%= form_for @congressmember do |f| %>
   <div class="row">
     <div class = "small-offset-3 small-6 columns">
       <%= f.label :first_name, class: 'input-group-label' %>
@@ -23,7 +23,7 @@
   <div class="row">
     <div class = "small-offset-3 small-6 columns">
       <%= f.label :state, class: 'input-group-label' %>
-      <%= f.select :state,['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California', 'Colorado', 'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii', 'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',
+      <%= f.select :state,['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California', 'Colorado', 'Connecticut', 'Delaware', 'District of Columbia', 'Florida', 'Georgia', 'Hawaii', 'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',
         'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota', 'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire', 'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota','Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island', 'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont', 'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming', 'District of Columbia', 'Puerto Rico', 'Guam', 'American Samoa', 'U.S. Virgin Islands', 'Northern Mariana Islands'] %>
     </div>
   </div>
