--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,17 +6,17 @@
 
   <div class="field">
     <%= f.label :first_name, 'First Name', class: 'input-group-label' %>
-    <%= f.email_field :first_name, autofocus: true %>
+    <%= f.text_field :first_name, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :last_name, 'Last Name', class: 'input-group-label' %>
-    <%= f.email_field :last_name, autofocus: true %>
+    <%= f.text_field :last_name, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :username,  class: 'input-group-label' %>
-    <%= f.email_field :username, autofocus: true %>
+    <%= f.text_field :username, autofocus: true %>
   </div>
 
   <div class="field">
