--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [current_user, @lists] do |f| %>
+<%= form_for [@user, @list] do |f| %>
 
   <div class="row">
     <div class = "small-offset-3 small-6 columns">
