--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,9 +1,24 @@
-<div class="expandable">
-  <div class="cards-container">
-    <div class="table-cards">
-      <% @lists.each do |list| %>
+
+<!-- <% if @lists.blank? %>
+
+  <div class="expandable">
+    <div class="cards-container">
+      <div align="center" style="padding: 20px, margin: 20px">
+        <h3 style="color: indigo">It looks like you don't have any lists, would you like to start one now?</h3>
+        <h3 class="hollow button">
+          <%= link_to 'New List', new_user_list_path(current_user) %>
+        </h3>
+      </div>
+    </div>
+  </div> -->
+
+<!-- <% else %> -->
+    <div class="expandable">
+      <div class="cards-container">
+        <div class="table-cards">
+        <% @lists.each do |list| %>
         <div class="table-card">
-          <h3><%= list.name %></h3>
+        <h3><%= list.name %></h3>
           <% list.congressmembers.each do |c| %>
           <ul>
             <% if c.middle_name.present? %>
@@ -15,10 +30,11 @@
           </ul>
           <% end %>
           <div align="center" style="padding: 0">
-            <h3 class="hollow button"><%= link_to 'Edit', user_list_path(current_user, list) %></h3>
+            <h3 class="hollow button"><%= link_to 'Edit', edit_user_list_path(current_user, list) %></h3>
           </div>
         </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
-</div>
+<!-- <% end %> -->
