--- a/app/views/congressmembers/_form_congressmembers.html.erb
+++ b/app/views/congressmembers/_form_congressmembers.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @congressmember do |f| %>
+<%= form_for [@congressmember] do |f| %>
   <div class="row">
     <div class = "small-offset-3 small-6 columns">
       <%= f.label :first_name, class: 'input-group-label' %>
