--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,5 @@
 
-<!-- <% if @lists.blank? %>
+<% if @lists.blank? %>
 
   <div class="expandable">
     <div class="cards-container">
@@ -10,31 +10,35 @@
         </h3>
       </div>
     </div>
-  </div> -->
+  </div>
 
-<!-- <% else %> -->
-    <div class="expandable">
-      <div class="cards-container">
-        <div class="table-cards">
+<% else %>
+  <div class="expandable">
+    <div class="cards-container">
+      <div class="table-cards">
         <% @lists.each do |list| %>
-        <div class="table-card">
-        <h3><%= list.name %></h3>
-          <% list.congressmembers.each do |c| %>
+      <div class="table-card">
+      <h3><%= link_to list.name, list_path(list) %>
+        <!-- <%= link_to "✎", edit_user_list_path(current_user, list) %> -->
+      </h3>
+        <% list.congressmembers.each do |c| %>
           <ul>
             <% if c.middle_name.present? %>
               <% name = c.first_name + " " + c.middle_name + " " + c.last_name %>
             <% else %>
               <% name = c.first_name + " " + c.last_name %>
             <% end %>
-            <li style="list-style: none"><%= link_to name, congressmember_path(c)%></li>
+            <li style="list-style: none">
+              <%= link_to name, congressmember_path(c) %>
+            </li>
           </ul>
           <% end %>
           <div align="center" style="padding: 0">
-            <h3 class="hollow button"><%= link_to 'Edit', edit_user_list_path(current_user, list) %></h3>
+            <h3 class="hollow button"><%= link_to 'Add Congressmembers', list_path(list) %></h3>
           </div>
         </div>
         <% end %>
       </div>
     </div>
   </div>
-<!-- <% end %> -->
+<% end %>
