--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -17,25 +17,27 @@
     <div class="cards-container">
       <div class="table-cards">
         <% @lists.each do |list| %>
-      <div class="table-card">
-      <h3><%= link_to list.name, list_path(list) %>
-        <!-- <%= link_to "✎", edit_user_list_path(current_user, list) %> -->
-      </h3>
-        <% list.congressmembers.each do |c| %>
-          <ul>
-            <% if c.middle_name.present? %>
-              <% name = c.first_name + " " + c.middle_name + " " + c.last_name %>
-            <% else %>
-              <% name = c.first_name + " " + c.last_name %>
+          <div class="table-card">
+          <h3><%= link_to list.name, list_path(list) %>
+            <%= link_to "✎", edit_user_list_path(current_user, list) %>
+          </h3>
+            <% list.congressmembers.each do |c| %>
+              <ul>
+                <% if c.middle_name.present? %>
+                  <% name = c.first_name + " " + c.middle_name + " " + c.last_name %>
+                <% else %>
+                  <% name = c.first_name + " " + c.last_name %>
+                <% end %>
+                <% name += ", " + c.party + "-" + c.state  %>
+                <li style="list-style: none">
+                  <%= link_to name, congressmember_path(c) %>
+                  <%= link_to '☒', list_congresslist_path(list, c), method: :delete %>
+                </li>
+              </ul>
             <% end %>
-            <li style="list-style: none">
-              <%= link_to name, congressmember_path(c) %>
-            </li>
-          </ul>
-          <% end %>
-          <div align="center" style="padding: 0">
-            <h3 class="hollow button"><%= link_to 'Add Congressmembers', list_path(list) %></h3>
-          </div>
+            <div align="center" style="padding: 0">
+              <h3 class="hollow button"><%= link_to 'Add Congressmembers', list_path(list) %></h3>
+            </div>
         </div>
         <% end %>
       </div>
