--- a/app/views/congressmembers/_form_congressmembers.html.erb
+++ b/app/views/congressmembers/_form_congressmembers.html.erb
@@ -86,8 +86,8 @@
 
   <div class="row">
     <div class = "small-offset-3 small-6 columns">
-      <%= f.label :phone_number, class: 'input-group-label' %>
-      <%= f.text_field(:phone_number, size: 60, placeholder: "123-456-7890") %>
+      <%= f.label :phone, class: 'input-group-label' %>
+      <%= f.text_field(:phone, size: 60, placeholder: "123-456-7890") %>
     </div>
   </div>
 
