--- a/app/views/congressmembers/edit.html.erb
+++ b/app/views/congressmembers/edit.html.erb
@@ -1,10 +1,3 @@
-<div align="center">
-  <% if @congressmember.middle_name.present? %>
-    <% name = @congressmember.first_name + " " + @congressmember.middle_name + " " + @congressmember.last_name %>
-  <% else %>
-    <% name = @congressmember.first_name + " " + @congressmember.last_name %>
-  <% end %>
-<h3><%= name %></h3>
-</div>
+<h3><%= @congressmember.full_name %></h3>
 
 <%= render 'form_congressmembers' %>
