--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,8 +42,11 @@
       <div class="top-bar-right">
       <ul class="menu">
         <br>
-        <li><input type="search" placeholder="Search"></li>
-        <li><button type="button" class="button">Search</button></li>
+        <li><%= form_tag(congressmembers_path, method: :get) do %></li>
+        <li><%= text_field_tag :term, "", class: "search-bar" %></li>
+        <li><%= submit_tag 'Search', class: "search" %></li>
+        <% end %>
+        <br>
       </ul>
     </div>
   </div>
