--- a/app/views/congressmembers/_form_congressmembers.html.erb
+++ b/app/views/congressmembers/_form_congressmembers.html.erb
@@ -1,22 +1,8 @@
 <%= form_for [@congressmember] do |f| %>
   <div class="row">
     <div class = "small-offset-3 small-6 columns">
-      <%= f.label :first_name, class: 'input-group-label' %>
-      <%= f.text_field(:first_name, size: 60, placeholder: "First Name") %>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class = "small-offset-3 small-6 columns">
-      <%= f.label :middle_name, class: 'input-group-label' %>
-      <%= f.text_field(:middle_name, size: 60, placeholder: "Middle Name (Optional)") %>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class = "small-offset-3 small-6 columns">
-      <%= f.label :last_name, class: 'input-group-label' %>
-      <%= f.text_field(:last_name, size: 60, placeholder: "Last Name") %>
+      <%= f.label :full_name, class: 'input-group-label' %>
+      <%= f.text_field(:full_name, size: 60, placeholder: "First Name") %>
     </div>
   </div>
 
