--- a/app/views/congressmembers/index.html.erb
+++ b/app/views/congressmembers/index.html.erb
@@ -1,5 +1,3 @@
-<div id="app"></div>
-
 <div class="expandable">
   <div class="cards-container">
     <div class="table-cards">
@@ -11,11 +9,10 @@
             <img src="<%= congressmember.photo %>">
           <% end %>
             <h3>
-              <% name = congressmember.first_name + " " + congressmember.last_name %>
-              <%= link_to name, congressmember_path(congressmember) %>
+              <%= link_to congressmember.full_name, congressmember_path(congressmember) %>
             </h3>
-            <h5><%= congressmember.state %>, <%= congressmember.party %></h5>
-            <p><strong><%= congressmember.chamber.upcase %></strong></p>
+            <h5><%= congressmember.state %>, <%= congressmember.party[0] %></h5>
+            <p><strong><%= congressmember.chamber %></strong></p>
         </div>
       <% end %>
     </div>
