--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,12 +7,7 @@
               <br>
               <% @congressmembers.each do |c| %>
               <ul>
-                <% if c.middle_name.present? %>
-                  <% name = c.first_name + " " + c.middle_name + " " + c.last_name %>
-                <% else %>
-                  <% name = c.first_name + " " + c.last_name %>
-                <% end %>
-                <% name += ", " + c.party + "-" + c.state  %>
+                <% c.full_name += ", " + c.party + "-" + c.state  %>
                 <li style="list-style: none"><%= link_to name, congressmember_path(c)%>
                   <%= link_to '☒', list_congresslist_path(@list, c), method: :delete %>
                 </li>
