--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -50,8 +50,8 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #4b0082,
-  secondary: #9370db,
+  primary: #024366,
+  secondary: #98BDD0,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
