--- a/app/views/congressmembers/show.html.erb
+++ b/app/views/congressmembers/show.html.erb
@@ -10,7 +10,7 @@
       <% end %>
 
     <div class="secondary callout">
-      <h1 style="color: indigo"><%= @congressmember.full_name %></h1>
+      <h1><%= @congressmember.full_name %></h1>
       <h5><%= chamber %></h5>
       <h3><%= @congressmember.party %>, <%= @congressmember.state %></h3>
     </div>
