add react to index

--- a/app/views/congressmembers/show.html.erb
+++ b/app/views/congressmembers/show.html.erb
@@ -9,7 +9,7 @@
         <% chamber = @congressmember.chamber.upcase %>
       <% end %>
 
-    <div class="secondary callout">
+    <div class="secondary callout" style="padding-bottom: 10px">
       <h1><%= @congressmember.full_name %></h1>
       <h5><%= chamber %></h5>
       <h3><%= @congressmember.party %>, <%= @congressmember.state %></h3>
