--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,7 +3,7 @@
     <div class="table-card">
         <h3 style="color: indigo"><%= @list.name %></h3>
           <% if @congressmembers.present? %>
-            <div class="secondary callout">
+            <div class="secondary-callout">
               <br>
               <% @congressmembers.each do |c| %>
               <ul>
