--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -48,7 +48,7 @@
   </div>
   <div class="row" align="center">
     <div class = "small-offset-3 small-6 columns">
-      <%= f.submit "Join" %>
+      <%= f.submit "Join", class: "button primary" %>
     </div>
   </div>
 <% end %>
