--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,12 @@
  *= require foundation_and_overrides
 
  */
+ .button.hollow.numbers {
+   margin-right: 8px;
+   width: 10%;
+   margin-left: 8px;
+   margin-top: 25px;
+ }
  .callout {
    border: 0px;
  }
