--- a/app/views/congressmembers/index.html.erb
+++ b/app/views/congressmembers/index.html.erb
@@ -1,20 +1,1 @@
-<div class="expandable">
-  <div class="cards-container">
-    <div class="table-cards">
-      <% @congressmembers.each do |congressmember| %>
-        <div class="table-card">
-          <% if congressmember.photo.blank? %>
-            <img src="https://rothfus.house.gov/sites/rothfus.house.gov/files/wysiwyg_uploaded/services.jpg">
-          <% else %>
-            <img src="<%= congressmember.photo %>">
-          <% end %>
-            <h3>
-              <%= link_to congressmember.full_name, congressmember_path(congressmember) %>
-            </h3>
-            <h5><%= congressmember.state %>, <%= congressmember.party[0] %></h5>
-            <p><strong><%= congressmember.chamber.upcase %></strong></p>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
+<div id="app"> </div>
