--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,7 +4,7 @@
   <div class="expandable">
     <div class="cards-container">
       <div align="center" style="padding: 20px, margin: 20px">
-        <h3 style="color: indigo">It looks like you don't have any lists, would you like to start one now?</h3>
+        <h3>It looks like you don't have any lists, would you like to start one now?</h3>
         <h3 class="hollow button">
           <%= link_to 'New List', new_user_list_path(current_user) %>
         </h3>
