--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,7 @@
 <div class="expandable">
   <div class="cards-container">
     <div class="table-card">
-        <h3 style="color: indigo"><%= @list.name %></h3>
+        <h3><%= @list.name %></h3>
           <% if @congressmembers.present? %>
             <div class="secondary-callout">
               <br>
