--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -79,6 +79,19 @@
     right: 3%;
   }
 
+  @media only screen and (max-width: 772px) {
+    .searchBar {
+      width: 26%;
+    }
+  }
+
+  @media only screen and (max-width: 639px) {
+    .searchBar {
+      width: 95%;
+      top: 8%;
+    }
+  }
+
   .outer {
     display: flex;
   }
