--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -68,7 +68,7 @@
   }
 
 
-  /*@media only screen and (max-width: 639px) {
+  @media only screen and (max-width: 639px) {
     .searchBar {
       width: 35%;
       top: 3%;
@@ -82,7 +82,7 @@
       top: 10%;
       right: 3%;
     }
-  }*/
+  }
 
   #spacer {
     display: inline;
