--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -8,7 +8,7 @@
               <% @congressmembers.each do |c| %>
               <ul>
                 <% c.full_name += ", " + c.party + "-" + c.state  %>
-                <li style="list-style: none"><%= link_to name, congressmember_path(c)%>
+                <li style="list-style: none"><%= link_to c.full_name, congressmember_path(c)%>
                   <%= link_to '☒', list_congresslist_path(@list, c), method: :delete %>
                 </li>
               </ul>
