fix previous button so it doesn't appear on first page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,16 @@
    margin-left: 8px;
    margin-top: 25px;
  }
+
+ .button.hollow.empty {
+   margin-right: 8px;
+   width: 10%;
+   margin-left: 8px;
+   margin-top: 25px;
+   color: white;
+   border: white;
+ }
+
  .callout {
    border: 0px;
  }
