--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,12 +15,6 @@
  *= require foundation_and_overrides
 
  */
- .button.hollow.numbers {
-   margin-right: 8px;
-   width: 10%;
-   margin-left: 8px;
-   margin-top: 25px;
- }
 
  .button.hollow.empty {
    margin-right: 8px;
@@ -30,6 +24,10 @@
    color: white;
    border: white;
  }
+
+ empty:hover{
+   background-color: white;
+}
 
  .callout {
    border: 0px;
