--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,23 +14,15 @@
   <body>
     <div class="top-bar">
       <div class="top-bar-left">
-        <ul class="dropdown menu" data-dropdown-menu>
-          <li class="menu-text"><h1><strong><%=link_to "POLITICALL", root_path%></strong></h1></li>
+        <ul>
+          <li><h1><strong><%=link_to "POLITICALL", root_path%></strong></h1></li>
           <% if user_signed_in? %>
-            <li><%= link_to "Your Account", edit_user_registration_path %>
-              <ul class="menu">
-                <li><%= link_to "Edit Account", edit_user_registration_path %></li>
-                <li><%= link_to "New List", new_user_list_path(current_user) %></li>
-                <li><%= link_to "Your Lists", user_lists_path(current_user) %></li>
-              </ul>
-            </li>
+              <li><%= link_to "Edit Account", edit_user_registration_path %></li>
+              <li><%= link_to "New List", new_user_list_path(current_user) %></li>
+              <li><%= link_to "Your Lists", user_lists_path(current_user) %></li>
             <% if current_user.admin? %>
-                <li><%= link_to "Admin", admin_users_path %>
-                  <ul class="menu">
-                    <li><%= link_to "All Users", admin_users_path %></li>
-                    <li><%= link_to "Add Congressmember", new_congressmember_path %></li>
-                  </ul>
-                </li>
+              <li><%= link_to "All Users", admin_users_path %></li>
+              <li><%= link_to "Add Congressmember", new_congressmember_path %></li>
             <% end %>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
           <% else %>
