--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,19 @@
   <body>
     <div class="top-bar">
       <div class="top-bar-left">
-        <ul>
-          <li><h1><strong><%=link_to "POLITICALL", root_path%></strong></h1></li>
+        <ul class="dropdown menu" data-dropdown-menu>
+          <li class="menu-text"><h1><strong><%=link_to "POLITICALL", root_path%></strong></h1></li>
           <% if user_signed_in? %>
-              <li><%= link_to "Edit Account", edit_user_registration_path %></li>
-              <li><%= link_to "New List", new_user_list_path(current_user) %></li>
-              <li><%= link_to "Your Lists", user_lists_path(current_user) %></li>
+                <li><%= link_to "Edit Account", edit_user_registration_path %></li>
+                <li><%= link_to "New List", new_user_list_path(current_user) %></li>
+                <li><%= link_to "Your Lists", user_lists_path(current_user) %></li>
             <% if current_user.admin? %>
-              <li><%= link_to "All Users", admin_users_path %></li>
-              <li><%= link_to "Add Congressmember", new_congressmember_path %></li>
+                <li><%= link_to "Admin", admin_users_path %>
+                  <ul class="menu">
+                    <li><%= link_to "All Users", admin_users_path %></li>
+                    <li><%= link_to "Add Congressmember", new_congressmember_path %></li>
+                  </ul>
+                </li>
             <% end %>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
           <% else %>
@@ -35,15 +39,15 @@
     <div class="container2">
       <% if flash[:notice] %>
         <% if flash[:notice].is_a?(String) %>
-          <h5><%= flash[:notice] %></h5>
+          <h5 class="notice"><%= flash[:notice] %></h5>
         <% else %>
           <% flash[:notice].each do |key, value| %>
             <% if value.is_a?(Array) %>
               <% value.each do |error| %>
-                <h5><%= "#{key.capitalize} #{error}." %></h5>
+                <h5 class="notice"><%= "#{key.capitalize} #{error}." %></h5>
               <% end %>
             <% else %>
-              <h5><%= "#{key.capitalize} #{value}." %></h5>
+              <h5 class="notice"><%= "#{key.capitalize} #{value}." %></h5>
             <% end %>
             <br />
           <% end %>
