--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div align="center">
-    <%= f.submit "Submit" %>
+    <%= f.submit "Submit", class: "hollow button" %>
   </div>
 
 <% end %>
